--- a/mastermindgame/public/index.html
+++ b/mastermindgame/public/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <script
+      src="https://kit.fontawesome.com/1800dfb554.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="icon" href="a.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
